restrutured classes code for set the loads is working

--- a/SimplySupportedBeamAnalysis.ipynb
+++ b/SimplySupportedBeamAnalysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -18,11 +18,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Beam = Beam(10)"
+    "ThisBeam = Beam(10)\n",
+    "\n",
+    "loadDist =[10,12,14,15]\n",
+    "loadIntensities = [100,50,50,60]\n",
+    "ThisBeam.SetLoads(loadDist, loadIntensities)\n",
+    "\n",
+    "print(ThisBeam.Loads[1].Intensity)\n"
    ]
   },
   {
