changes to notebook

--- a/SimplySupportedBeamAnalysis.ipynb
+++ b/SimplySupportedBeamAnalysis.ipynb
@@ -26,9 +26,7 @@
     "\n",
     "loadDist =[10,12,14,15]\n",
     "loadIntensities = [100,50,50,60]\n",
-    "ThisBeam.SetLoads(loadDist, loadIntensities)\n",
-    "\n",
-    "print(ThisBeam.Loads[1].Intensity)\n"
+    "ThisBeam.SetLoads(loadDist, loadIntensities)\n"
    ]
   },
   {
